[package]
name = "try_actix"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0.130"
actix-cors = "0.5.4"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"